@@ -1,7 +1,7 @@
 
 New Features in taskwarrior 2.3.1
 
-  - 
+  - Better handling for deletion of recurring tasks.
 
 New commands in taskwarrior 2.3.1
 
